package NMyRpc;

////////////////////////////////////////////////////////////////////////////////

message TReqSomeCall
{
    required int32 a = 1;
}

message TRspSomeCall
{
    required int32 b = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqPassCall
{
}

message TRspPassCall
{
    required string user = 1;
    required string mutation_id = 2;
    required bool retry = 3;
}

////////////////////////////////////////////////////////////////////////////////

message TReqRegularAttachments
{
}

message TRspRegularAttachments
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqCompression
{
    required int32 request_codec = 1;
    required string message = 2;
}

message TRspCompression
{
    required string message = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqNullAndEmptyAttachments
{
}

message TRspNullAndEmptyAttachments
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqDoNothing
{
}

message TRspDoNothing
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqCustomMessageError
{
}

message TRspCustomMessageError
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqNotRegistered
{
}

message TRspNotRegistered
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqSlowCall
{
}

message TRspSlowCall
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqSlowCanceledCall
{
}

message TRspSlowCanceledCall
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqNoReply
{
}

message TRspNoReply
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqFlakyCall
{
}

message TRspFlakyCall
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqStreamingEcho
{
    optional bool delayed = 1 [default = false];
}

message TRspStreamingEcho
{
    required int64 total_size = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqServerStreamsAborted
{
}

message TRspServerStreamsAborted
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqServerNotReading
{
    required bool sleep = 1;
}

message TRspServerNotReading
{
}

////////////////////////////////////////////////////////////////////////////////

message TReqServerNotWriting
{
    required bool sleep = 1;
}

message TRspServerNotWriting
{
}

